config/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa-example-app
  namespace: opa-example-app
  labels:
    app: opa-example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa-example-app
  template:
    metadata:
      labels:
        app: opa-example-app
    spec:
      containers:
        - name: opa-example-app
          image: quay.io/ifont/k8s-opa-example-app:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
