config/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: opa-example-app
  namespace: opa-example-app
spec:
  rules:
  - host: opa.ifontlabs.com
    http:
      paths:
      - backend:
          service:
            name: opa-example-app
            port:
              number: 8080
        path: /
        pathType: Prefix
